After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 653404 - Mozilla extensions (.xpi) only open after renaming to .zip
Mozilla extensions (.xpi) only open after renaming to .zip
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: Paolo Bacchilega
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2011-06-25 17:19 UTC by Jonathan Cutting
Modified: 2011-10-19 07:19 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jonathan Cutting 2011-06-25 17:19:09 UTC
When opening a file from Nautilus by double-clicking, if that file is a zip with a .xpi file extension, the archive fails to open and a message:

Could not open "[filename].xpi"

Archive type not supported.

Renaming the file to [filename].zip and repeating the above result in the expected behaviour.

OS: Ubuntu Oneiric x86_64
file-roller: 3.0.2
Comment 1 Paolo Bacchilega 2011-08-22 07:17:27 UTC
I cannot reproduce this bug, the archive type is already guessed by the content and not by the extension.
Comment 2 Jeremy Bicha 2011-08-22 07:21:32 UTC
I confirm this with file-roller 3.1.3 on Ubuntu 11.10 "Oneiric" with the xpi found here: https://addons.mozilla.org/en-US/thunderbird/addon/lightning/
Comment 3 Paolo Bacchilega 2011-08-22 15:09:12 UTC
This happens only when zip/unzip is used instead of 7zip.  It's now fixed in the current development version.  Thanks for the bug report.
Comment 4 Antoine Turmel 2011-10-18 22:24:58 UTC
not working for me : file-roller 3.2.0 on Ubuntu 11.10 "Oneiric"
Comment 5 Paolo Bacchilega 2011-10-19 07:19:50 UTC
It works for me, maybe the issue is Ubuntu specific, file a bug in their bug tracking system.