Fixed loading of zip archives with zip/unzip

Always add CAN_READ to the capabilities if unzip is present

Based on FR commit: ddfbd6ebf2498d9f89196e857a5cb302546cb035
From: Paolo Bacchilega <paobac@src.gnome.org>
Gnome bug: http://bugzilla.gnome.org/show_bug.cgi?id=653404